hometask_18(fix)